--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@mui/material": "^5.11.3",
     "@mui/x-date-pickers": "^5.0.13",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -42,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "jest": "^29.4.1"
   }
 }
